--- a/src/components/layout/AskColor.css
+++ b/src/components/layout/AskColor.css
@@ -61,12 +61,11 @@
 
 #select-color-container .desc {
   position: absolute;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0,0,0,0.4);
   color: rgb(200,200,200);
-  padding: 2px 3px;
-  border-radius: 5px;
+  padding: 2px 12px;
   top: 55px;
-  right: 18px;
+  right: 9px;
   opacity: 0;
   outline-color: transparent;
   border-color: transparent;
@@ -81,6 +80,11 @@
   position: absolute;
   opacity: 1;
   top: 70px;
+  transform: skew(45deg);
+}
+
+#select-color-container.deactive:hover .desc .desc-text {
+  transform: skew(-45deg);
 }
 
 #select-color {
