--- a/src/components/pages/styles/contact.css
+++ b/src/components/pages/styles/contact.css
@@ -1,6 +1,6 @@
 #contact .background {
   position: absolute;
-  color: #33333331;
+  color: #88888815;
   font-size: 2000%;
   top: 10vh;
   left: -7vw;
@@ -50,15 +50,15 @@
 }
 
 #form .form-group:nth-child(2) {
-  margin-left: 40px;
+  /* margin-left: 40px; */
 }
 
 #form .form-group:nth-child(3) {
-  margin-left: 25px;
+  /* margin-left: 25px; */
 }
 
 #form .form-group:nth-child(4) {
-  margin-left: 10px;
+  /* margin-left: 10px; */
 }
 
 #form label {
@@ -94,7 +94,20 @@
   transform: skew(45deg);
 }
 
-#form button {
+#form .input-side-rect {
+  position: absolute;
+  width: 15px;
+  height: 40px;
+  transform: skew(45deg);
+  left: -25px;
+  background: var(--color-three);
+}
+
+#form .input-side-rect:nth-of-type(2) {
+  background: var(--color-four);
+}
+
+#form input {
   border: none;
   width: 170px;
   padding: 12px;
