--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -1,16 +1,19 @@
-#home .go-to-contact-container {
-  position: absolute;
-  left: 45%;
-  bottom: 5%;
-  cursor: pointer;
-  font-size: 200%;
-}
+#home {
 
-#home .go-to-about-container {
-  position: absolute;
-  right: -3%;
-  top: 48%;
-  cursor: pointer;
-  font-size: 200%;
-  transform: rotateZ(-90deg)
+  .go-to-contact-container {
+    position: absolute;
+    left: 45%;
+    bottom: 5%;
+    cursor: pointer;
+    font-size: 200%;
+  }
+  
+  .go-to-about-container {
+    position: absolute;
+    right: -3%;
+    top: 48%;
+    cursor: pointer;
+    font-size: 200%;
+    transform: rotateZ(-90deg)
+  }
 }
