--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -1,16 +1,19 @@
-#works .go-to-contact-container {
-  position: absolute;
-  left: -3%;
-  top: 46%;
-  cursor: pointer;
-  font-size: 200%;
-  transform: rotateZ(90deg);
-}
-
-#works .go-to-about-container {
-  position: absolute;
-  top: 3%;
-  left: 47%;
-  cursor: pointer;
-  font-size: 200%;
+#works {
+  
+  .go-to-contact-container {
+    position: absolute;
+    left: -3%;
+    top: 46%;
+    cursor: pointer;
+    font-size: 200%;
+    transform: rotateZ(90deg);
+  }
+  
+  .go-to-about-container {
+    position: absolute;
+    top: 3%;
+    left: 47%;
+    cursor: pointer;
+    font-size: 200%;
+  }
 }
