--- a/src/components/pages/styles/pages.scss
+++ b/src/components/pages/styles/pages.scss
@@ -186,10 +186,19 @@
 }
 
 .page {
-  border: 1px solid #aaa;
-  border-radius: 200px;
   width: 100%;
   height: 100%;
+  overflow: hidden;
+
+  &.on {
+    opacity: 1;
+    display: block;
+  }
+
+  &.off {
+    opacity: 0;
+    display: none;
+  }
 }
 
 .layer {
