--- a/src/components/pages/styles/contact.scss
+++ b/src/components/pages/styles/contact.scss
@@ -28,7 +28,7 @@
     cursor: pointer;
     font-size: 200%;
     background: transparent;
-    border: 1px solid var(--color-three);
+    border: 1px solid var(--color-one-title);
     border-right-color: transparent;
     height: 50px;
     font-size: 40px;
@@ -167,12 +167,13 @@
 
     .submit-side-layer {
       @extend .input-side-layer;
-      border: none;
-      background: var(--color-two);
       width: 60px;
+      height: 50px;
       top: 3px;
-      height: 48px;
       right: -40px;
+      border: 1px solid var(--color-two-title);
+      border-left-color: transparent;
+      background: var(--color-two);
     }
     
     .input-side-rect {
@@ -192,6 +193,7 @@
       color: var(--color-three-title);
       cursor: pointer;
       font-size: 150%;
+      border: 1px solid var(--color-two-title);
     }
   }
 }
