--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -38,6 +38,7 @@
   }
 
   .work {
+    position: relative;
     border: 1px solid red;
     cursor: pointer;
     flex-basis: 20%;
@@ -45,5 +46,23 @@
     align-items: center;
     justify-content: center;
     font-size: 400%;
+    
+    &:hover {
+      color: var(--color-two);
+      
+      .background {
+        width: 100%;
+      }
+    }
+
+    .background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 0;
+      height: 100%;
+      z-index: -1;
+      background: var(--color-three);
+    }
   }
 }
