--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -1,6 +1,7 @@
 #works {
   .page {
     display: flex;
+    flex-direction: column;
   }
   
   .go-to-contact-container {
@@ -39,13 +40,14 @@
 
   .work {
     position: relative;
-    border: 1px solid red;
+    // border: 1px solid red;
     cursor: pointer;
     flex-basis: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 400%;
+    color: var(--color-three);
     
     &:hover {
       color: var(--color-two);
@@ -59,10 +61,10 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 0;
+      width: 10%;
       height: 100%;
       z-index: -1;
-      background: var(--color-three);
+      background: var(--color-four);
     }
   }
 }
