--- a/src/components/pages/styles/contact.scss
+++ b/src/components/pages/styles/contact.scss
@@ -1,4 +1,5 @@
 #contact {
+  --go-to-home-width: 40px;
 
   .background {
     color: rgba(129, 129, 129, 0.1);
@@ -34,23 +35,27 @@
     font-size: 40px;
     padding-left: 30px;
     color: var(--color-three-title);
-    transform: skew(-45deg);
+    transform: skew(45deg);
     
     &:hover {
       padding-left: 70px;
     }
 
     .text {
-      transform: skew(45deg);
+      transform: skew(-45deg);
     }
   }
   
   .go-to-home-container {
     position: absolute;
-    left: 45%;
-    top: 2%;
+    width: var(--go-to-home-width);
+    height: var(--go-to-home-width);
+    left: calc((100vw - var(--go-to-home-width)) / 2);
+    top: 20px;
+    border: 1px solid red;
+    text-align: center;
+    border-radius: 9999px;
     cursor: pointer;
-    font-size: 200%;
   }
   
   .page.on {
