--- a/src/components/pages/styles/contact.scss
+++ b/src/components/pages/styles/contact.scss
@@ -60,41 +60,46 @@
       width: 100%;
       height: 100%;
       // border: 1px solid black;
-      overflow: hidden;
+      // overflow: hidden;
     }
-
+    
     &:hover {
-
+      
       .arrow {
-        // width: 0;
+        border: none;
         height: 0;
-        // left: calc(var(--go-to-home-width) / 2);
-
+        
         .line {
           height: 0;
         }
       }
-
+      
       .text {
         top: 0;
+        left: calc(var(--go-to-home-width) * -0.7);
+        width: calc(var(--go-to-home-width) * 2.4);
+        height: var(--go-to-home-width);
+        font-size: calc(var(--go-to-home-width) * 0.7);
+        border: 2px solid var(--color-four-title);
       }
     }
-
+    
     .arrow {
       position: absolute;
       width: 100%;
       height: 100%;
       top: 0;
       left: 0;
-      background: brown;
+      background: var(--color-one);
+      border: 2px solid var(--color-four-title);
       border-radius: 9999px;
       overflow: hidden;
-
+      
       .line {
         position: absolute;
         width: 4px;
         height: 25px;
-        background: #222c;
+        background: var(--color-one-title);
       }
       
       .line-one {
@@ -114,15 +119,16 @@
     
     .text {
       position: absolute;
-      width: calc(var(--go-to-home-width) * 2.4);
-      height: var(--go-to-home-width);
-      top: calc(var(--go-to-home-width) * 1.2);
-      left: calc(var(--go-to-home-width) * -0.7);
-      background: rgba(165, 42, 42, 1);
+      width: 0;
+      height: 0;
+      top: calc(var(--go-to-home-width));
+      left: calc(var(--go-to-home-width) * 0.5);
+      background: var(--color-one);
+      border: none;
       border-radius: 9999px;
       text-align: center;
-      color: white;
-      font-size: calc(var(--go-to-home-width) * 0.7);
+      color: var(--color-one-title);
+      font-size: 0;
       padding-top: calc(var(--go-to-home-width) * 0.10)
     }
   }
