--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -1,7 +1,7 @@
 #works {
   .page {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
   }
   
   .go-to-contact-container {
