--- a/src/components/pages/styles/home.scss
+++ b/src/components/pages/styles/home.scss
@@ -1,11 +1,85 @@
 #home {
+  --go-to-contact-width: 60px;
 
   .go-to-contact-container {
     position: absolute;
-    left: 45%;
-    bottom: 5%;
+    width: var(--go-to-contact-width);
+    height: var(--go-to-contact-width);
+    left: calc((100vw - var(--go-to-contact-width)) / 2);
+    bottom: 20px;
+    background: var(--color-one-title);
+    color: var(--color-one);
+    border: 1px solid var(--color-one-title);
+    border-radius: 19px;
     cursor: pointer;
-    font-size: 200%;
+    font-family: 'Courier New', Courier, monospace;
+    
+    .go-to-contact {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    
+    &:hover {
+      width: calc(var(--go-to-contact-width) * 3.2);
+      left: calc((100vw - var(--go-to-contact-width) * 3.2) / 2);
+      
+      .arrow {
+        bottom: calc(var(--go-to-contact-width) * -1);
+        left: calc(var(--go-to-contact-width) * 1.1);
+      }
+      
+      .text {
+        bottom: 0;
+        left: 0;
+        width: calc(var(--go-to-contact-width) * 3.2);
+        font-size: calc(var(--go-to-contact-width) * 0.7);
+      }
+    }
+    
+    .arrow {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      bottom: 0;
+      left: 0;
+      background: transparent;
+      border: none;
+      overflow: hidden;
+      
+      .line {
+        position: absolute;
+        width: 3px;
+        height: 25px;
+        background: var(--color-four-title);
+      }
+      
+      .line-one {
+        transform: rotateZ(135deg) translateX(6px) translateY(-32px);
+      }
+      
+      .line-two {
+        height: 40px;
+        transform: translateX(28px) translateY(10px);
+      }
+      
+      .line-three {
+        transform: rotateZ(45deg) translateX(45px) translateY(-7px);
+        
+      }
+    }
+    
+    .text {
+      position: absolute;
+      width: calc(var(--go-to-contact-width) * 2.4);
+      height: var(--go-to-contact-width);
+      bottom: calc(var(--go-to-contact-width) * -1);
+      left: calc(var(--go-to-contact-width) * -0.7);
+      padding-top: calc(var(--go-to-contact-width) * 0.15);
+      border: none;
+      text-align: center;
+    }
   }
   
   .go-to-about-container {
