--- a/src/components/pages/styles/contact.scss
+++ b/src/components/pages/styles/contact.scss
@@ -2,22 +2,30 @@
   --go-to-home-width: 60px;
   
   .background {
-    color: rgba(129, 129, 129, 0.1);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    color: rgba(220, 220, 220, 0.35);
+    // color: rgba(120, 120, 120, 0.1);
     font-size: 2500%;
-    background: #0000;
+    background: #0005;
+    background: var(--color-four);
+    // background: #0000;
     z-index: -1;
-    filter: blur(5px);
+    font-weight: 900;
     
     .line-one {
       position: absolute;
       left: 0;
       top: -5vh;
+      filter: blur(3px);
     }
     
     .line-two {
       position: absolute;
       top: 40vh;
       left: 25vw;
+      filter: blur(3px);
     }
   }
   
