--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -44,6 +44,14 @@
     font-size: 200%;
     z-index: 3;
   }
+
+  .a-work-is-active {
+    
+  }
+
+  .no-works-active {
+    
+  }
   
   .work {
     position: relative;
@@ -63,6 +71,14 @@
         .title {
           color: var(--color-three-title);
         }
+
+        .button {
+          transform: skew(15deg);
+
+          .text {
+            transform: skew(-15deg);
+          }
+        }
       }
       
       .background {
@@ -76,6 +92,11 @@
       .button {
         opacity: 1;
         margin-top: 20px;
+        transform: skew(-15deg);
+        
+        .text {
+          transform: skew(15deg);
+        }
       }
     }
     
@@ -122,7 +143,6 @@
       font-size: 30%;
       background: var(--color-two-title);
       padding: 10px 20px;
-      border-radius: 9px;
       color: var(--color-four-title);
       cursor: pointer;
     }
