--- a/src/components/pages/styles/works.scss
+++ b/src/components/pages/styles/works.scss
@@ -46,16 +46,27 @@
   }
 
   .a-work-is-active {
-    
-  }
+    .work {
 
+      &.opened {
+        flex-grow: 1;
+      }
+      
+      &.closed {
+        flex-shrink: 1;
+        font-size: 350%;
+      }
+    }
+  }
+  
   .no-works-active {
-    
+    .work {
+      flex-grow: 1;
+    }
   }
   
   .work {
     position: relative;
-    flex-basis: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -63,7 +74,6 @@
     font-size: 400%;
     cursor: default;
     z-index: 1;
-    // border: 1px solid red;
 
     &:hover {
       
